--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span>E</span>
     </div>
     <div class="description">
-        <span>haii sayanggg, aku ada sesuatu nii..</span>
+        <span>halo, ni ada sesuatu buat kamu yang kemarin abis ultah, yang versi aslinya nyusul yee wkwkw</span>
     </div>
     <div class="button">
         <button>
